[tool.poetry]
name = "aruco"
version = "0.1.0"
description = "detect aruco and give realtime distance"
authors = ["pixidream <developer@studiopixidream.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
